--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>Nuovo sito bellissimo eccezionale</title>
   </head>
   <body>
-    Ciao Sono Cristina !
+    <h1>Intestazione1</h1>
+    <h2>Intestazione2</h2>
+     <h3>Intestazione3</h3>
+     <h4>Intestazione1</h4>
+     <h5>Intestazione1</h5>
+    <p>Benvenuto nel mio bello sito eccezionale</p>
   </body>
 </html>
